--- a/Unse/app/build.gradle
+++ b/Unse/app/build.gradle
@@ -26,4 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+
+    //추가한 라인(계속 업그레이드 되고 있다.)
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    //서버로 데이터를 보낼때 okhttp를 사용한다면 추가
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
+
+// ADD THIS AT THE BOTTOM
+apply plugin: 'com.google.gms.google-services'
