--- a/Lucky/app/build.gradle
+++ b/Lucky/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
     defaultConfig {
-        applicationId "com.hosuks.unse"
+        applicationId "com.hosuks.lucky"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 2
-        versionName "1.1"
+        versionCode 1
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,18 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    //추가한 라인(계속 업그레이드 되고 있다.)
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
-    //서버로 데이터를 보낼때 okhttp를 사용한다면 추가
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile files('libs/CaulySDK-3.4.11.jar')
 }
-
-// ADD THIS AT THE BOTTOM
-apply plugin: 'com.google.gms.google-services'
