--- a/Unse/app/build.gradle
+++ b/Unse/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.hosuks.unse"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 2
-        versionName "1.1"
+        versionCode 5
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,7 +30,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     //서버로 데이터를 보낼때 okhttp를 사용한다면 추가
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile files('libs/CaulySDK-3.4.11.jar')
+    //compile files('libs/CaulySDK-3.4.11.jar')
+    compile 'com.google.firebase:firebase-ads:9.6.1'
 }
 
 // ADD THIS AT THE BOTTOM
