--- a/babyMarket/app/build.gradle
+++ b/babyMarket/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "24.0.3"
     defaultConfig {
-        applicationId "com.hosuks.unse"
+        applicationId "com.hosuks.babymarket"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 9
-        versionName "1.8"
+        versionCode 7
+        versionName "1.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,19 +20,24 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    //추가한 라인(계속 업그레이드 되고 있다.)
+
+    // Analytics
+    compile 'com.google.firebase:firebase-core:9.6.1'
+
+    // 클라우드 메시징 / 알림
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+
+    // AdMob
+    compile 'com.google.firebase:firebase-ads:9.6.1'
+
     //서버로 데이터를 보낼때 okhttp를 사용한다면 추가
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    //compile files('libs/CaulySDK-3.4.11.jar')
-    compile 'com.google.firebase:firebase-ads:9.6.1'
 }
 
-// ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
