--- a/Lucky2/app/build.gradle
+++ b/Lucky2/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.hosuks.unse"
+        applicationId "com.hosuks.lucky2"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 10
-        versionName "1.9"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     //서버로 데이터를 보낼때 okhttp를 사용한다면 추가
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    //compile files('libs/CaulySDK-3.4.11.jar')
+
     compile 'com.google.firebase:firebase-ads:9.6.1'
 }
 
